# license-demo

./: Cargo.toml  README.md  trial.token
license-server/: Cargo.toml  trial.signature  trial.token
license-server/src/: main.rs
trial-binary/: .last_license_check  Cargo.toml  README.md  license_response.json  trial.signature  trial.token
trial-binary/src/: main.rs
