# license-demo/Cargo.toml
[workspace]
members = [
    "license-server",
    "trial-binary"
]
resolver = "2"

# Shared dependencies across workspace (optional but recommended)
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
ed25519-dalek = { version = "2" }
hex = "0.4"
hex-literal = "1.1.0"
