[package]
name = "license-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4.3"
rand_core = { version = "0.6", features = ["getrandom"] }


