[package]
name = "trial-binary"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2" }
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
hex-literal = "1.1.0"
