# trial-binary/Cargo.toml
[package]
name = "trial-binary"
version = "0.1.0"
edition = "2024"
default-run = "trial-binary"

[[bin]]
name = "trial-binary"
path = "src/main.rs"

[[bin]]
name = "get-license"
path = "src/bin/get-license.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
hex-literal.workspace = true
